tests/instantiating/invalid/once_property_invalid_type/bus.fbd
main bus
	foo config
		once = 0
